# compression-layer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  autoformat.sh  pyproject.toml
.github/workflows/: ci.yml
configs/: generation.yaml  training.yaml
data/training/: test.jsonl  train.jsonl  valid.jsonl
docs/: AGENTS.md  CLAUDE.md  COMPRESSION_LAYER_IMPLEMENTATION_PLAN.md  MLX_TRAINING.md  SETUP.md  TASKS.md  VALIDATION_IMPROVEMENTS.md
docs/plans/: 2026-01-29-tinker-sdk-rewrite.md  2026-01-30-mlx-run-storage.md  2026-01-31-v2-production-training.md
scripts/: analysis_data.py  data_sanitization.py  dataset_manager.py  download_hf_code.py  download_hf_conversations.py  evaluate_adapter.py  format_markdown.py  format_training_data.py  generate_seed.py  generate_synthetic.py  merge_corpus.py  mlflow_logger.py  prepare_corpus.py  train_local.py  train_tinker.py  validate_batch.py  validate_synthetic.py  visualize_mlx_training.py
src/evaluation/: __init__.py  evaluate_adapter.py
src/generation/: __init__.py  adapter_generator.py  corpus_loader.py  md_formatter.py  seed_generator.py
tests/: conftest.py  test_adapter_generator.py  test_analysis_data.py  test_corpus_loader.py  test_download_hf_code.py  test_download_hf_conversations.py  test_evaluate_adapter.py  test_format_data.py  test_generate_synthetic.py  test_harness.py  test_md_formatter.py  test_merge_corpus.py  test_metrics.py  test_mlflow_logger.py  test_run_storage.py  test_sanitization_manager.py  test_seed_generator.py  test_tinker_data.py  test_tinker_sdk_client.py  test_train_mlx_eval.py  test_train_mlx_runs.py  test_train_tinker.py  test_validate_synthetic.py  test_visualize_mlx_training.py
visualization/: corpus.ipynb
(+20 files in other folders)
