[project]
name = "llm-compression-layer"
version = "0.1.0"
description = "Universal semantic compression layer for LLM inputs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "diskcache>=5.6.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "tinker",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
]
training = [
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "trl>=0.12.0",
    "torch>=2.4.0",
]
# Unsloth installed separately (requires specific CUDA setup)
# pip install "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git"

[project.scripts]
generate-seed = "scripts.generate_seed:main"
validate-batch = "scripts.validate_batch:main"
train = "scripts.train_compressor:main"
evaluate = "scripts.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
